sqlite/src/bindings/sqlite3_bindings.rs

unsafe extern "C" {
    pub fn sqlite3_column_count(pStmt: *mut sqlite3_stmt) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_column_name(
        arg1: *mut sqlite3_stmt,
        N: core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_column_name16(
        arg1: *mut sqlite3_stmt,
        N: core::ffi::c_int,
    ) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_column_database_name(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_column_database_name16(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
    ) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_column_table_name(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_column_table_name16(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
    ) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_column_origin_name(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_column_origin_name16(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
    ) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_column_decltype(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
    ) -> *const core::ffi::c_char;
}
unsafe extern "C" {
    pub fn sqlite3_column_decltype16(
        arg1: *mut sqlite3_stmt,
        arg2: core::ffi::c_int,
    ) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_step(arg1: *mut sqlite3_stmt) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_data_count(pStmt: *mut sqlite3_stmt) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_column_blob(
        arg1: *mut sqlite3_stmt,
        iCol: core::ffi::c_int,
    ) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_column_double(arg1: *mut sqlite3_stmt, iCol: core::ffi::c_int) -> f64;
}
unsafe extern "C" {
    pub fn sqlite3_column_int(arg1: *mut sqlite3_stmt, iCol: core::ffi::c_int) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_column_int64(arg1: *mut sqlite3_stmt, iCol: core::ffi::c_int) -> sqlite3_int64;
}
unsafe extern "C" {
    pub fn sqlite3_column_text(
        arg1: *mut sqlite3_stmt,
        iCol: core::ffi::c_int,
    ) -> *const core::ffi::c_uchar;
}
unsafe extern "C" {
    pub fn sqlite3_column_text16(
        arg1: *mut sqlite3_stmt,
        iCol: core::ffi::c_int,
    ) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_column_value(
        arg1: *mut sqlite3_stmt,
        iCol: core::ffi::c_int,
    ) -> *mut sqlite3_value;
}
unsafe extern "C" {
    pub fn sqlite3_column_bytes(
        arg1: *mut sqlite3_stmt,
        iCol: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_column_bytes16(
        arg1: *mut sqlite3_stmt,
        iCol: core::ffi::c_int,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_column_type(arg1: *mut sqlite3_stmt, iCol: core::ffi::c_int)
        -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_finalize(pStmt: *mut sqlite3_stmt) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_reset(pStmt: *mut sqlite3_stmt) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_create_function(
        db: *mut sqlite3,
        zFunctionName: *const core::ffi::c_char,
        nArg: core::ffi::c_int,
        eTextRep: core::ffi::c_int,
        pApp: *mut core::ffi::c_void,
        xFunc: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: core::ffi::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xStep: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: core::ffi::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xFinal: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_context)>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_create_function16(
        db: *mut sqlite3,
        zFunctionName: *const core::ffi::c_void,
        nArg: core::ffi::c_int,
        eTextRep: core::ffi::c_int,
        pApp: *mut core::ffi::c_void,
        xFunc: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: core::ffi::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xStep: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: core::ffi::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xFinal: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_context)>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_create_function_v2(
        db: *mut sqlite3,
        zFunctionName: *const core::ffi::c_char,
        nArg: core::ffi::c_int,
        eTextRep: core::ffi::c_int,
        pApp: *mut core::ffi::c_void,
        xFunc: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: core::ffi::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xStep: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: core::ffi::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xFinal: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_context)>,
        xDestroy: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_create_window_function(
        db: *mut sqlite3,
        zFunctionName: *const core::ffi::c_char,
        nArg: core::ffi::c_int,
        eTextRep: core::ffi::c_int,
        pApp: *mut core::ffi::c_void,
        xStep: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: core::ffi::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xFinal: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_context)>,
        xValue: ::core::option::Option<unsafe extern "C" fn(arg1: *mut sqlite3_context)>,
        xInverse: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut sqlite3_context,
                arg2: core::ffi::c_int,
                arg3: *mut *mut sqlite3_value,
            ),
        >,
        xDestroy: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_aggregate_count(arg1: *mut sqlite3_context) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_expired(arg1: *mut sqlite3_stmt) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_transfer_bindings(
        arg1: *mut sqlite3_stmt,
        arg2: *mut sqlite3_stmt,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_global_recover() -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_thread_cleanup();
}
unsafe extern "C" {
    pub fn sqlite3_memory_alarm(
        arg1: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut core::ffi::c_void,
                arg2: sqlite3_int64,
                arg3: core::ffi::c_int,
            ),
        >,
        arg2: *mut core::ffi::c_void,
        arg3: sqlite3_int64,
    ) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_value_blob(arg1: *mut sqlite3_value) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_value_double(arg1: *mut sqlite3_value) -> f64;
}
unsafe extern "C" {
    pub fn sqlite3_value_int(arg1: *mut sqlite3_value) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_value_int64(arg1: *mut sqlite3_value) -> sqlite3_int64;
}
unsafe extern "C" {
    pub fn sqlite3_value_pointer(
        arg1: *mut sqlite3_value,
        arg2: *const core::ffi::c_char,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_value_text(arg1: *mut sqlite3_value) -> *const core::ffi::c_uchar;
}
unsafe extern "C" {
    pub fn sqlite3_value_text16(arg1: *mut sqlite3_value) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_value_text16le(arg1: *mut sqlite3_value) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_value_text16be(arg1: *mut sqlite3_value) -> *const core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_value_bytes(arg1: *mut sqlite3_value) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_value_bytes16(arg1: *mut sqlite3_value) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_value_type(arg1: *mut sqlite3_value) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_value_numeric_type(arg1: *mut sqlite3_value) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_value_nochange(arg1: *mut sqlite3_value) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_value_frombind(arg1: *mut sqlite3_value) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_value_encoding(arg1: *mut sqlite3_value) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn sqlite3_value_subtype(arg1: *mut sqlite3_value) -> core::ffi::c_uint;
}
unsafe extern "C" {
    pub fn sqlite3_value_dup(arg1: *const sqlite3_value) -> *mut sqlite3_value;
}
unsafe extern "C" {
    pub fn sqlite3_value_free(arg1: *mut sqlite3_value);
}
unsafe extern "C" {
    pub fn sqlite3_aggregate_context(
        arg1: *mut sqlite3_context,
        nBytes: core::ffi::c_int,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_user_data(arg1: *mut sqlite3_context) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_context_db_handle(arg1: *mut sqlite3_context) -> *mut sqlite3;
}
unsafe extern "C" {
    pub fn sqlite3_get_auxdata(
        arg1: *mut sqlite3_context,
        N: core::ffi::c_int,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_set_auxdata(
        arg1: *mut sqlite3_context,
        N: core::ffi::c_int,
        arg2: *mut core::ffi::c_void,
        arg3: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    );
}
unsafe extern "C" {
    pub fn sqlite3_get_clientdata(
        arg1: *mut sqlite3,
        arg2: *const core::ffi::c_char,
    ) -> *mut core::ffi::c_void;
}
unsafe extern "C" {
    pub fn sqlite3_set_clientdata(
        arg1: *mut sqlite3,
        arg2: *const core::ffi::c_char,
        arg3: *mut core::ffi::c_void,
        arg4: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    ) -> core::ffi::c_int;
}
pub type sqlite3_destructor_type =
    ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>;
unsafe extern "C" {
    pub fn sqlite3_result_blob(
        arg1: *mut sqlite3_context,
        arg2: *const core::ffi::c_void,
        arg3: core::ffi::c_int,
        arg4: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    );
}
unsafe extern "C" {
    pub fn sqlite3_result_blob64(
        arg1: *mut sqlite3_context,
        arg2: *const core::ffi::c_void,
        arg3: sqlite3_uint64,
        arg4: ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>,
    );
}
unsafe extern "C" {
    pub fn sqlite3_result_double(arg1: *mut sqlite3_context, arg2: f64);
}
